Repaired articles with width resize. repaired align center navbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,7 @@ html {
   margin: 0;
   padding: 0;
   width: 100%;
+  overflow-x: hidden;
 }
 #app {
   font-family: "Noto Sans", sans-serif;
@@ -20,10 +21,8 @@ html {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-  align-items: center;
   background-color: var(--primary);
   @media (min-width: 768px) {
     flex-direction: row;
-    align-items: flex-start;
   }
 }
