--- a/src/components/Navbar/TheNavbar.scss
+++ b/src/components/Navbar/TheNavbar.scss
@@ -6,7 +6,7 @@
   align-items: center;
   z-index: 999;
   background-color: #fff;
-  width: 100%;
+  width: 100vw;
   &--left {
     border-right: var(--border);
     height: 100%;
